# sautoconf

./: README  sautoconf.m4
tests/: hello.c
tests/basic/: Makefile.am  configure.ac
tests/feature/: Makefile.am  acinclude.m4  configure.ac
